# SecureBox

./: .gitignore  CHECKLIST.md  CMakeLists.txt  DEPLOYMENT_SUMMARY.md  README.md  SETUP_GUIDE.md  c_cpp_properties_template.json  compile_opengl.bat  hellowindow2.cpp  main.cpp  setup_opengl_environment.ps1  setup_vscode.bat  tasks_template.json
docs/: ALGORITHM.md  CHECKLIST.md
glad/include/glad/: gl.h
shaders/: example.glsl
